--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Four Degree - Premium Student Events</title>
+
+    <!-- SEO -->
     <meta name="description" content="The exclusive social hub for university students to host, discover, and co-create premium events" />
     <meta name="author" content="Four Degree" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Four Degree - Premium Student Events" />
     <meta property="og:description" content="The exclusive social hub for university students" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://yourdomain.com" /> <!-- OPTIONAL: Add your actual domain -->
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@fourdegree" />
+    <meta name="twitter:title" content="Four Degree - Premium Student Events" />
+    <meta name="twitter:description" content="The exclusive social hub for university students" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
